...
      />
      <Tab.Screen
        component={SearchStackNavigator}
        name="Search"
        options={{
          tabBarButton: tabBarButtonFor('Search'),
          tabBarButtonTestID: visibleTabSet.has('Search') ? 'tab-search' : undefined,
          tabBarIcon: tabBarIcon('search'),
          tabBarLabel: t('features.search.search'),
        }}
      />
      <Tab.Screen
        component={LibraryStackNavigator}
...
